syntax = "proto3";

package firewall;

import "buf/validate/validate.proto";

option go_package = "github.com/werbot/werbot/internal/core/firewall/proto/message";

// -----------------------------------------------------
// global messages
message AccessPolicy {
  int32 country = 1 [(buf.validate.field).int32 = { in: [ 0, 1 ] }, (buf.validate.field).required = true];
  int32 network = 2 [(buf.validate.field).int32 = { in: [ 0, 1 ] }, (buf.validate.field).required = true];
}

message Country {
  string country_id = 1 [(buf.validate.field).string.uuid = true];
  string scheme_id = 2 [(buf.validate.field).string.uuid = true];
  string country_name = 3;
  string country_code = 4 [(buf.validate.field).string.len = 2];
}

message Network {
  string network_id = 1 [(buf.validate.field).string.uuid = true];
  string scheme_id = 2 [(buf.validate.field).string.uuid = true];
  string network = 3 [(buf.validate.field).string.ip = true];
}
// end global messages
// -----------------------------------------------------

// rpc IPAccess
message IPAccess {
  message Request {
    string client_ip = 1 [(buf.validate.field).string.ip = true, (buf.validate.field).required = true]; // @gotags: json:"-"
  }
  message Response {
    string country_name = 1;
    string country_code = 2;
  }
}
// -----------------------------------------------------

// rpc UpdateFirewallListData
message UpdateFirewallListData {
  message Request {}
  message Response {}
}
// -----------------------------------------------------
